--- a/mainsite/templates/html5.html
+++ b/mainsite/templates/html5.html
@@ -7,6 +7,7 @@
     <title>{% block title %}This is my new project home page{% endblock title %}</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     {# Add Third-party plugins and apps here. Like JQuery & bootstrap #}
+    <!-- marketo scripts -->
     {% render_block "marketo_scripts" %}
     {% block plugs_apps %}{% endblock plugs_apps %}
     <link rel="stylesheet" type="text/css" media="all" href="{% static 'www/css/inline.css' %}" />
