--- a/mainsite/static/ogf/css/mainstyle.css
+++ b/mainsite/static/ogf/css/mainstyle.css
@@ -325,7 +325,7 @@ table th, table td { padding: 5px; }
 .topicListItem3 { border: 1px dotted #b4b4b9; padding: 5px; display: inline-block; width: 32%; }
 
 /* =================================================================== */
-/* TILES & BOXES
+/* OGF TILES & BOXES
 ====================================================================== */
 /* =================================================================== */
 /* VARIABLES
