--- a/mainsite/static/ogf/css/_tiles.scss
+++ b/mainsite/static/ogf/css/_tiles.scss
@@ -1,5 +1,5 @@
 /* =================================================================== */
-/* TILES & BOXES
+/* OGF TILES & BOXES
 ====================================================================== */
 @import 'vars';
 
