--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -664,6 +664,11 @@ table {
   font-size:          12px;
   margin-bottom:      15px;
 
+  h4 {
+    margin:           0 0 5px 0;
+    padding-bottom:   5px;
+    border-bottom:    1px dotted $col-basegrey;
+  }
   ul {
     list-style:       none;
     padding:          0;
@@ -673,6 +678,19 @@ table {
       list-style-position:inside;
       margin:         0 15px 0 0;
       padding:        0;
+
+      &:hover {
+        background-color: $col-basegrey;
+        color:        $col-white;
+      }
+
+      a {
+        padding:      5px;
+      }
+      a:hover {
+        background-color: $col-basegrey;
+        color:        $col-white;
+      }
     }
   }
 }
