Topics and Tags on Article Detail Page

--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -658,7 +658,7 @@ table {
   width:              32%;
 }
 
-.article-topics {
+.article-topics, .article-tags {
   background-color:   $col-ogflightgrey;
   padding:            10px;
   font-size:          12px;
