print fix, removal of editorial, Author bar fix in Brief Detail

--- a/mainsite/static/ogf/css/_ogfcontent.scss
+++ b/mainsite/static/ogf/css/_ogfcontent.scss
@@ -572,7 +572,9 @@
   margin-bottom:        20px;
 }
 .articleBodyText {
-
+  img {
+    margin:             0 10px 0 10px;
+  }
 }
 .articleShares {
   font-size:            18px;
