--- a/spe_blog/templates/spe_blog/plugins/brief_accordion.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_accordion.html
@@ -47,7 +47,7 @@
                     {% endif %}
 
                         <div class="col-sm-9 poiblurb">
-                            <h3>{{ forloop.counter }}:{{ forloop.revcounter }} - {{ article.title }}</h3>
+                            <h3>{{ article.title }}</h3>
                             {% if article.date %}
                                 <p class="poi-date">{{ article.date|date:"F Y" }}</p>
                             {% endif %}
