--- a/spe_blog/templates/spe_blog/plugins/brief_index.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_index.html
@@ -26,8 +26,9 @@
                 <p>
                     {{ article.article_text | bleachall | slice:":100" | striptags | safe }} ...
                 </p>
+            <div class="moreB">.... Read More</div>
             </a>
-            <div class="moreB">... Read More</div>
+
             </div>
 
             {% if forloop.counter|divisibleby:2 %}
