--- a/mainsite/templates/ogf_home.html
+++ b/mainsite/templates/ogf_home.html
@@ -14,9 +14,9 @@
         <div class="col-xs-12 col-sm-8 col-lg-7 col-lg-offset-1 featurecol">
             {% placeholder "feature" %}
         </div>
-        <div class="col-xs-12 col-sm-4 col-lg-3 editorialcol">
-            {% placeholder "editorial" %}
-        </div>
+{#        <div class="col-xs-12 col-sm-4 col-lg-3 editorialcol">#}
+{#            {% placeholder "editorial" %}#}
+{#        </div>#}
 
         <div class="col-xs-12 adZone2 text-center" id="adZone2">
             <!-- AdSpeed.com Tag 8.0.2 for [Zone] OGF 2 1160x60 [Any Dimension] -->
