--- a/mainsite/templates/ogf_subpage.html
+++ b/mainsite/templates/ogf_subpage.html
@@ -12,12 +12,12 @@
 {#    </div>#}
 
     <div class="row content-area">
-        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent" id="printMe">
+        <div class="col-sm-8 col-lg-7 col-lg-offset-1 areaContent">
             {% placeholder "notice" %}
             {% placeholder "page title" %}
             {% placeholder "content" %}
         </div>
-        <div class="col-sm-4 col-lg-3 areaRightSide">
+        <div class="col-sm-4 col-lg-3 areaRightSide dontPrintMe">
             {% placeholder "aside" %}
             {% placeholder "additional-content" %}
         </div>
