--- a/spe_blog/templates/spe_blog/plugins/brief_detail.html
+++ b/spe_blog/templates/spe_blog/plugins/brief_detail.html
@@ -1,13 +1,13 @@
 {% load cms_tags sekizai_tags tz %}
 
-    <div class="row articleDetail">
+    <div class="row articleDetail" id="printMe">
         <div class="col-sm-12 articleTitleBox">
 {#            <h1 class="articleTitle">{{ article.title }}</h1>#}
             <hr class="tiletitlehr">
             <h1 class="tiletitles">{{ article.title }}</h1>
             <div class="col-sm-12 tiletitlehr"></div>
             <div class="col-sm-8 articleAuthorBox">
-                {{ article.author }} | {{ article.date|date:"d F Y" }}
+                {% if article.author %}{{ article.author }} | {% endif %}{{ article.date|date:"d F Y" }}
             </div>
             <div class="col-sm-4 articleShares text-right">
                 {% include 'include_article_shares.html' %}
