--- a/spe_blog/templates/spe_blog/plugins/image_left.html
+++ b/spe_blog/templates/spe_blog/plugins/image_left.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 {% for article in articles %}
-    <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %}"
+    <article class="tile whiteback story{% if not article.published %} unpublished{% endif %}{% if article.future %} future{% endif %} dontPrintMe"
                 style="min-height: 150px">
     <a href="{{ article.get_absolute_url }}">
         <div class="story-wrap row">
