--- a/spe_blog/templates/spe_blog/article_index.html
+++ b/spe_blog/templates/spe_blog/article_index.html
@@ -9,7 +9,7 @@
 
             <p><a href="{{ article.get_absolute_url }}"><span class="badge">{{ article.magazine }}</span> {{ article.title }} <span class="badge">{{ article.article_hits }}</span></a>
             <br>[{% for topic in article.topics.all %}
-                    {{ topic.code }} ", "
+                    {{ topic.code }} ,
                 {% endfor %}]
             </p>
         {% endfor %}
